Implemented Devise for Users

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
-<div class="jumbotron">
+<div class="jumbotron center">
   <h1>About us</h1>
-  <p>We are working on our One Month Rails Pinteresting app! </p>
+  <p>We aim to meetup and collaborate together
+   to equip and train one another to live healthy worship lifestyles  </p>
+  </div>
