--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
 
-$body-bg:  #ecf0f1;
+$body-bg:  white;
 $font-family-sans-serif: 'Lato', 'Helvetica Neue',Arial,sans-serif;
 $navbar-height: 45px;
 $navbar-default-bg: #c0392b;
