Cleaned up the pins scaffold

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron center">
-     <h1>Welcome to the Worship Gathering!</h1>
+     <h1>Welcome to Worship Gathering</h1>
      <% if user_signed_in? %>
      <p> Welcome to the members dashboard </p>
      <% else %>
