Add pins/user association

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,4 +2,7 @@
   <h1>About us</h1>
   <p>We aim to meetup and collaborate together
    to equip and train one another to live healthy worship lifestyles  </p>
+
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/wh-R-I0KwYQ" frameborder="0" allowfullscreen></iframe>
+       
   </div>
