--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -12,8 +12,10 @@
   <% end %>
 
   <div class="form-group">
+   <div class="left">
     <%= f.label :description %>
     <%= f.text_field :description, class: "form-control" %>
+  </div>
   </div>
   <div class="form-group">
     <%= f.submit class: "btn btn-primary" %>
