--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,3 +1,4 @@
+ <div class="left">
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Pins</h1>
@@ -6,6 +7,7 @@
   <thead>
     <tr>
       <th>Description</th>
+      <th>User_id</th>
       <th ></th>
     </tr>
   </thead>
@@ -14,14 +16,20 @@
     <% @pins.each do |pin| %>
       <tr>
         <td><%= pin.description %></td>
+        <%= pin.user.email if pin.user %>
         <td><%= link_to 'Show', pin %></td>
-        <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-        <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if pin.user == current_user %>
+  <%= link_to 'Edit', edit_pin_path(pin) %>
+  <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
+</div>
 
+<br>
+<% if user_signed_in? %>
 <%= link_to 'New Pin', new_pin_path %>
+<% end %>
