Add Amazon S3 for Paperclip uploads to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron center">
-     <h1>Welcome to Worship Gathering</h1>
+     <h1>Welcome to Free Run</h1>
      <% if user_signed_in? %>
-     <p> Welcome to the members dashboard </p>
+     <p> Welcome to the Runners dashboard Justin you dumb dumb</p>
      <% else %>
        <p>
          <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
