--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,5 +1,4 @@
- <div class="left">
-<p id="notice"><%= notice %></p>
+<%= image_tag @pin.image.url (:medium) %>
 
 <p>
   <strong>Description:</strong>
